<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cover_image_view"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_margin="@dimen/dimen1"
            tools:src="@drawable/alestorm" />

        <TextView
            style="@style/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song" />

        <EditText
            android:id="@+id/song_edit_text"
            style="@style/edit_text_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/song" />

        <TextView
            style="@style/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist" />

        <EditText
            android:id="@+id/artist_edit_text"
            style="@style/edit_text_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artist" />

        <TextView
            style="@style/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album" />

        <EditText
            android:id="@+id/album_edit_text"
            style="@style/edit_text_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen1"
            android:layout_marginBottom="@dimen/dimen1">

            <Button
                style="@style/button"
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dimen4"
                android:text="@string/save_button" />
            <Button
                style="@style/button"
                android:id="@+id/play_song_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen4"
                android:text="@string/play_button" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
